# SAGAR_NUERON

./: README.md
GPT2/: .gitignore  README.md  TrainAndSaveGptWeights.py  VR_REPORT.txt  file.txt  inference_model.py  pyproject.toml  requirements.txt  requirements_cpu.txt  temp.py
GPT2/binary_classifier_using_gpt2/: .gitignore  data_loaders.py  data_preperation.ipynb  download_dataset.py  evaluate.py  finetuning_gpt.py  prepare_training_data.py
GPT2/download_original_gpt2/: download_weights.py  main.py
GPT2/model_configuration/: gpt_model.py
GPT2/sagar_neuron_gpt2/: TrainAndSaveGptWeights.py  docs.txt  inference_model.py  pyproject.toml
GPT2/sagar_neuron_gpt2/load_model/: load_local_models.py
GPT2/sagar_nueron_gpt2/: README.md
