[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagar_nueron_gpt2"
version = "0.1.0"
authors = [
  { name = "GANGASAGAR HL", email = "hlgsagar.1@gmail.com" },
]
description = "A GPT-2 implementation for training and inference in pytorch"
readme = "README.md"

requires-python = ">=3.8"
license = "MIT"
keywords = ["gpt2", "machine learning", "nlp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.0.0",
  "tiktoken>=0.7.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/1-GPT2"
"Source" = "https://github.com/yourusername/1-GPT2"